--- a/Mobile_Price_Range_Prediction_Classification_Project.ipynb
+++ b/Mobile_Price_Range_Prediction_Classification_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4kznyLQAu9g9AQhkmVY+p",
+      "authorship_tag": "ABX9TyOLZHm9LQ5cR7g8PZHe+rot",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,8 +53,9 @@
       "cell_type": "markdown",
       "source": [
         "# **GitHub Link :**\n",
-        "Mohammad Sufawan -\n",
-        "Tousif sheikh-"
+        "Mohammad Sufawan -https://github.com/sufawan20/Mobile-Price-Range-Prediction-Classification-Project./blob/main/Mobile_Price_Range_Prediction_Classification_Project.ipynb\n",
+        "\n",
+        "Tousif sheikh- https://github.com/tousif99/Mobile-Price-Range-Prediction-Classification-Project/blob/main/Mobile_Price_Range_Prediction_Classification_Project.ipynb"
       ],
       "metadata": {
         "id": "pBhwQGHYoc5B"
